[gd_scene load_steps=22 format=3 uid="uid://domhm87hbhbg1"]

[ext_resource type="Script" uid="uid://dajlr3n5wjwmb" path="res://player/Player.gd" id="1_nm1yx"]
[ext_resource type="Script" uid="uid://b62ppvc03a6b1" path="res://demo/src/CameraManager.gd" id="2_loos7"]
[ext_resource type="AudioStream" uid="uid://uwwbbus3xkud" path="res://sounds/old/output_000.mp3" id="3_nqtny"]
[ext_resource type="AudioStream" uid="uid://bvhvhxots33on" path="res://sounds/old/output_001.mp3" id="4_x8qd1"]
[ext_resource type="AudioStream" uid="uid://x2u7fwj2r7xm" path="res://sounds/old/output_002.mp3" id="5_ubio3"]
[ext_resource type="AudioStream" uid="uid://km4dcgmdxn4w" path="res://sounds/old/output_003.mp3" id="6_sdxoi"]
[ext_resource type="AudioStream" uid="uid://cya4ry1qxkyk" path="res://sounds/old/output_004.mp3" id="7_ncd0f"]
[ext_resource type="AudioStream" uid="uid://5t74hh2a8bst" path="res://sounds/old/output_005.mp3" id="8_564i2"]
[ext_resource type="AudioStream" uid="uid://dnpvyxejaswcs" path="res://sounds/old/output_006.mp3" id="9_7q5qd"]
[ext_resource type="AudioStream" uid="uid://dx7w0q5osm628" path="res://sounds/old/output_007.mp3" id="10_4qnbb"]
[ext_resource type="AudioStream" uid="uid://clly3ly2yei65" path="res://sounds/ambiance/winter-storm-wind-lashing-snow-distilery-190212-58901.mp3" id="11_5qrx2"]
[ext_resource type="AudioStream" uid="uid://d1nulpcd72fxi" path="res://sounds/ambiance/hand-crank-generator-slow-76850.mp3" id="12_b32pr"]
[ext_resource type="AudioStream" uid="uid://cvskk2xnjmeth" path="res://sounds/ambiance/paper-rustle-81855.mp3" id="12_d4g0h"]
[ext_resource type="AudioStream" uid="uid://cl46aqeyooudh" path="res://sounds/ambiance/paper-rustle-reverse-81855.mp3" id="13_v4f8b"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_mox7b"]
streams_count = 8
stream_0/stream = ExtResource("3_nqtny")
stream_1/stream = ExtResource("4_x8qd1")
stream_2/stream = ExtResource("5_ubio3")
stream_3/stream = ExtResource("6_sdxoi")
stream_4/stream = ExtResource("7_ncd0f")
stream_5/stream = ExtResource("8_564i2")
stream_6/stream = ExtResource("9_7q5qd")
stream_7/stream = ExtResource("10_4qnbb")

[sub_resource type="SphereShape3D" id="SphereShape3D_smq6u"]

[sub_resource type="PlaneMesh" id="PlaneMesh_b32pr"]

[sub_resource type="GDScript" id="GDScript_b32pr"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_lwhhq"]
height = 1.5

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_twc2s"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_lsqiy"]

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
script = ExtResource("1_nm1yx")

[node name="FootAudio3D" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_mox7b")

[node name="AmbiantAudio3D" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.93869, 0)
stream = ExtResource("11_5qrx2")
autoplay = true

[node name="ChargingAudio3D" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.93869, 0)
stream = ExtResource("12_b32pr")

[node name="MapInAudio3D" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.93869, 0)
stream = ExtResource("12_d4g0h")

[node name="MapOutAudio3D" type="AudioStreamPlayer3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.93869, 0)
stream = ExtResource("13_v4f8b")

[node name="CameraManager" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.72567, 0)
script = ExtResource("2_loos7")

[node name="SpotLight3D" type="SpotLight3D" parent="CameraManager"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.984808, -0.173648, 0, 0.173648, 0.984808, 0.333974, -0.0798351, -0.228625)
light_color = Color(1, 1, 0.780392, 1)
light_energy = 1.5
shadow_enabled = true
spot_range = 500.0
spot_angle = 60.0

[node name="Arm" type="SpringArm3D" parent="CameraManager"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.32515, -0.0321627)
shape = SubResource("SphereShape3D_smq6u")
spring_length = 6.0
margin = 0.5

[node name="Camera3D" type="Camera3D" parent="CameraManager/Arm"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.33568, 0)
fov = 90.0
near = 0.25
far = 16384.0

[node name="MapArm3D" type="SpringArm3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.912244, 0)
spring_length = -0.7

[node name="MapMeshInstance3D" type="MeshInstance3D" parent="MapArm3D"]
unique_name_in_owner = true
transform = Transform3D(0.8, 0, 0, 0, 0.69282, -0.4, 0, 0.4, 0.69282, 0, 0.991232, -1.54988)
visible = false
mesh = SubResource("PlaneMesh_b32pr")
skeleton = NodePath("")
script = SubResource("GDScript_b32pr")

[node name="CollisionShapeBody" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.25, 0)
shape = SubResource("CapsuleShape3D_lwhhq")

[node name="CollisionShapeRay" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1, 0)
shape = SubResource("SeparationRayShape3D_twc2s")

[node name="Body" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_lsqiy")
